--- a/register.html
+++ b/register.html
@@ -31,6 +31,7 @@
         font-weight: bold;
       }
       input[type="text"],
+      input[type="nisn"],
       input[type="kelas"],
       input[type="number"],
       input[type="email"],
@@ -70,6 +71,10 @@
         <div class="form-group">
           <label for="name">Nama Lengkap:</label>
           <input type="text" id="name" name="name" required />
+        </div>
+        <div class="form-group">
+          <label for="nisn">NISN:</label>
+          <input type="nisn" id="nisn" name="nisn" required />
         </div>
         <div class="form-group">
           <label for="kelas">Kelas:</label>
