--- a/register.html
+++ b/register.html
@@ -31,8 +31,6 @@
         font-weight: bold;
       }
       input[type="text"],
-      input[type="nisn"],
-      input[type="kelas"],
       input[type="number"],
       input[type="email"],
       input[type="tel"],
@@ -74,11 +72,11 @@
         </div>
         <div class="form-group">
           <label for="nisn">NISN:</label>
-          <input type="nisn" id="nisn" name="nisn" required />
+          <input type="text" id="nisn" name="nisn" required />
         </div>
         <div class="form-group">
           <label for="kelas">Kelas:</label>
-          <input type="kelas" id="kelas" name="kelas" required />
+          <input type="text" id="kelas" name="kelas" required />
         </div>
         <div class="form-group">
           <label for="absen">Absen:</label>
