--- a/register.html
+++ b/register.html
@@ -60,6 +60,20 @@
       .form-group button:hover {
         background-color: #218838;
       }
+      .form-group .back-to-login-page {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+      }
+
+      .form-group .back-to-login-page a {
+            color: #007bff;
+            text-decoration: none;
+      }
+
+      .form-group .back-to-login-page a:hover {
+            text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -97,6 +111,9 @@
         <div class="form-group">
           <button type="submit">Kirim</button>
         </div>
+        <div class="back-to-login-page">
+          <a href="login.html">Go Back</a>
+      </div>
       </form>
     </div>
   </body>
