--- a/absensi.html
+++ b/absensi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Absensi RFID</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,6 @@
                 <button type="submit">Absen</button>
             </form>
             <div id="response" class="response">
-                <!-- Hasil absensi akan ditampilkan di sini jika ada -->
             </div>
         </div>
     </div>
