--- a/register.html
+++ b/register.html
@@ -109,6 +109,10 @@
           <input type="textarea" id="alamat" name="alamat" required />
         </div>
         <div class="form-group">
+          <label for="rfid">RFID:</label>
+          <input type="number" id="rfid" name="rfid" required />
+        </div>
+        <div class="form-group">
           <button type="submit">Kirim</button>
         </div>
         <div class="back-to-login-page">
